# claude-dispatcher

./: .dispatcher.yaml  .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml  test_log.txt
.claude/: workflow
docs/: agent-evaluation-harness.md  agent-routing-policy.md  contract-first-deviation-model.md  feature-review-loop.md  how-to-author-tasks.md  improvement-plan.md  journal-format.md  machine-profile.md  presentation-outline.md  report-json.md  slack-app-manifest.json  slack-app-setup.md  task-batching.md
docs/architecture/: single-orchestrator.md
docs/dogfood/: BATCH_SMOKE_A.md  BATCH_SMOKE_B.md  CLAUDE_SMOKE.md  DESIGN_SMOKE.md  GROK_OPERATOR.md  README.md  SMOKE.md  SMOKE_RESULTS.md
docs/plans/: 2026-07-12-grok-first-dogfood.md
docs/retroactive_panel_results/: REPORT.md  TRIAGE.md
docs/templates/: PRD-template.md  planner-prompt.md
features/bakeoff-harness/: tasks.yaml
features/endpoint-agents/: tasks.yaml
features/feature-review-loop/: tasks.yaml
features/grok-dogfood/: PRD.md  batch-smoke.yaml  claude-smoke.yaml  design-smoke.yaml  smoke.yaml  tasks.yaml
features/phase0-1/: tasks.yaml
features/phase0-1-integration/: tasks.yaml
features/phase1a-2/: tasks.yaml
features/phase3-pr-flow/: tasks.yaml
features/phase4-verification/: tasks.yaml
src/claude_dispatcher/: __init__.py  __main__.py  auto_integrate.py  bakeoff.py  blast_radius.py  cli.py  cross_family_reviewer.py  design.py  dispatch_plan.py  disposition.py  doctor.py  endpoint_agents.py  forecast_bridge.py  journal.py  journal_read.py  mathx.py  mechanical_verify.py  merge_engine.py  merge_prs.py  notify.py  orchestrator.py  plan.py  pr.py  preflight.py  push_verify.py  quality_levels.py  repo_config.py  report.py  resume.py  risk.py  routing.py  run.py  safemath.py  seal_verify.py  spawn.py  status.py  summary.py  unblock.py  verifier.py  watch.py  (+2 more)
tests/: conftest.py  test_agent_fallback.py  test_agent_metadata.py  test_agent_routing.py  test_agy_model_gate.py  test_auto_integrate.py  test_bakeoff.py  test_blast_radius.py  test_budget_ceiling.py  test_capstone.py  test_collect_diff_excludes.py  test_commit_retry.py  test_concurrency.py  test_cross_family_reviewer.py  test_dependency_merge.py  test_disposition.py  test_doctor.py  test_dry_run.py  test_endpoint_agents.py  test_feature_review.py  test_forecast_bridge.py  test_implementer_prompts_effort_panel.py  test_integration_fixes.py  test_journal.py  test_mathx.py  test_mechanical_verify.py  test_merge_engine.py  test_no_claude_and_quality.py  test_no_claude_e2e.py  test_notify.py  test_orchestrator.py  test_orchestrator_journal.py  test_orchestrator_panel.py  test_orchestrator_verifier.py  test_packaging.py  test_per_task_model.py  test_plan.py  test_pr.py  test_pr_flow.py  test_prd_field.py  (+18 more)
tests/fixtures/: fake_agy.py  fake_claude.py  fake_grok.py  three_task.yaml
tools/: cross_family_panel.py  retroactive_sweep.py  verify_agy_pipe.sh
(+47 files in other folders)
